live updating timestamps!!

--- a/web/servers/olv/templates/profile.html
+++ b/web/servers/olv/templates/profile.html
@@ -10,6 +10,7 @@
 	<script src="/static/scripts/toolbar.js"></script>
 	<script src="/static/scripts/normal-page.js"></script>
 	<script src="/static/scripts/keys.js"></script>
+	<script src="/static/scripts/live-timestamp.js"></script>
 </head>
 <body>
 	<div class="content">
