--- a/web/servers/olv/templates/timeline.html
+++ b/web/servers/olv/templates/timeline.html
@@ -9,6 +9,7 @@
 	<script src="/static/scripts/tabs.js"></script>
 	<script src="/static/scripts/toolbar.js"></script>
 	<script src="/static/scripts/normal-page.js"></script>
+	<script src="/static/scripts/live-timestamp.js"></script>
 	<script onload="initTabs();" src="/static/scripts/keys.js"></script>
 </head>
 <body>
