--- a/web/servers/olv/templates/timeline.html
+++ b/web/servers/olv/templates/timeline.html
@@ -13,6 +13,25 @@
 	<script onload="initTabs();" src="/static/scripts/keys.js"></script>
 </head>
 <body>
+	<script>
+		/*
+		try {
+			var xhr = new XMLHttpRequest();
+
+			setInterval(function() {
+				if (xhr.seenBytes == xhr.responseText.length) return;
+				alert("progress. len: " + xhr.responseText.length);
+				xhr.seenBytes = xhr.responseText.length;
+			}, 50);
+
+			xhr.open("GET", "/streamer", true);
+			xhr.send();
+		} catch (e) {
+			alert(e);
+		}
+		*/
+	</script>
+
 	<div class="content">
 		<div class="header">
 			<div class="header__banner">
